# Cookbook

./: .gitignore  pyproject.toml  pytest.ini
cookbook/: __init__.py  settings.py  urls.py
recipes/: admin.py  models.py  urls.py  views.py
recipes/migrations/: 0001_initial.py  0002_recipe.py  0002_recipe_image_url.py  0002_recipe_slug.py  0002_remove_content_calories_remove_content_servings_and_more.py  0003_alter_recipe_slug.py  0003_category_image.py  0003_course_delete_recipe.py  0003_remove_content_courses_remove_content_cuisine_and_more.py  0004_alter_category_image.py  0004_alter_category_slug.py  0004_recipe.py  0005_cuisine.py  0006_content.py  0007_alter_content_recipe_instruction.py  0008_ingredient.py  0009_alter_content_cook_time_alter_content_prep_time_and_more.py  0010_alter_content_cook_time_alter_content_prep_time_and_more.py
recipes/templates/recipes/: category_list.html  category_recipes_list.html  home.html  recipe_detail.html  recipe_list.html
recipes/templatetags/: recipe_extras.py
recipes/tests/: test_views.py
templates/: base.html
