[tool.poetry]
name = "cookbook"
version = "0.1.0"
description = ""
authors = ["Pawel Bartczak <pawel@bartczak.tech>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1"
pillow = "^10.4.0"
pytest-django = "^4.8.0"
pytest = "^8.3.2"
python-dotenv = "^1.0.1"
django-extensions = "^3.2.3"
werkzeug = "^3.0.4"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.2"
ruff = "^0.6.1"
pytest-django = "^4.8.0"
pre-commit = "^3.8.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
exclude = ["manage.py", "asgi.py", "wsgi.py", "*/migrations/"]
line-length = 120

indent-width = 4
target-version = "py312"

[tool.ruff.lint]
select = ["ALL"]
ignore = ["D100","D103", "D104", "D101", "D102", "D105", "D106", "D203", "D213", "FIX002"]

[tool.ruff.format]
quote-style = "double"

# Like Black, indent with spaces, rather than tabs.
indent-style = "space"

# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"

[tool.ruff.lint.per-file-ignores]
"**/tests/**/*.py" = [
    "S101", # asserts allowed in tests.
    "PLR2004", # Ruff is pushing for constants instead of ints.
    "ARG", # Unused function args -> fixtures nevertheless are functionally relevant.

]
